--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -17,7 +17,7 @@ practiceTestUrl: https://us.mindhub.com/p/MU-MS-100?utm_source=microsoft&utm_med
 locales:
 - en
 - ja
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-100&examname=Экзамен%20MS-100:%20Идентификация%20и%20службы%20в%20Microsoft%20365&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fms-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-100&examname=Экзамен%20MS-100:%20Microsoft%20365%20Identity%20and%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fms-100
 levels:
 - advanced
 skills:
