--- a/learn-certs-pr/exams/ms-202.yml
+++ b/learn-certs-pr/exams/ms-202.yml
@@ -10,7 +10,7 @@ summary: >-
 
   <br/>
 
-  Этот экзамен предназначен только для кандидатов, сдавших [Экзамен 70-345&#58;](https://www.microsoft.com/learning/exam-70-345.aspx) Разработка и развертывание Microsoft Exchange Server 2016. Если вы не сдали экзамен 345, вы не получите сертификат, сдав этот экзамен.
+  Этот экзамен предназначен только для кандидатов, сдавших [Экзамен 70-345&#58;](https://www.microsoft.com/learning/exam-70-345.aspx) Designing and Deploying Microsoft Exchange Server 2016. Если вы не сдали экзамен 345, вы не получите сертификат, сдав этот экзамен.
 
 
   Кандидатами на этот экзамен являются администраторы обмена сообщениями, которые развертывают, настраивают, управляют, устраняют неполадки и отслеживают получателей, разрешения, защиту почты, поток почты и общие папки как в локальных, так и в облачных корпоративных средах.
@@ -23,7 +23,7 @@ summary: >-
 
 
   Администратор обмена сообщениями должен иметь практические знания о типах аутентификации, лицензировании и интеграции с приложениями Microsoft 365.
-subTitle: 'Этот экзамен предназначен только для кандидатов, сдавших Экзамен 70-345: Разработка и развертывание Microsoft Exchange Server 2016. Если вы не сдали экзамен 345, вы не получите сертификат, сдав этот экзамен.'
+subTitle: 'Этот экзамен предназначен только для кандидатов, сдавших Экзамен 70-345: Designing and Deploying Microsoft Exchange Server 2016. Если вы не сдали экзамен 345, вы не получите сертификат, сдав этот экзамен.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8R
 locales:
