--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -50,7 +50,7 @@ exams:
 - uid: exam.dp-201
 resources:
 - title: Обучение для получения сертификата
-  description: Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Azure Data Engineer Associate.
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Azure Data Engineer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWuAzL
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
