--- a/learn-certs-pr/azure-fundamentals.yml
+++ b/learn-certs-pr/azure-fundamentals.yml
@@ -28,7 +28,7 @@ exams:
 - uid: exam.az-900
 resources:
 - title: Обучение для получения сертификата
-  description: Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Azure Fundamentals.
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Azure Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE38YZj
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
