--- a/learn-certs-pr/exams/az-100.yml
+++ b/learn-certs-pr/exams/az-100.yml
@@ -34,7 +34,7 @@ relatedCertifications:
     uid: certification.azure-administrator
 resources:
 - title: Обучение для получения сертификата
-  description: Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Azure Administrator Associate.
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
