--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -20,7 +20,7 @@ iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjN
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-210&examname=Экзамен%20MB-210:%20Microsoft%20Dynamics%20365%20Sales&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-210
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-210&examname=Экзамен%20MB-210:%20Microsoft%20Dynamics%20365%20for%20Sales&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-210
 levels:
 - intermediate
 skills:
