--- a/learn-certs-pr/m365-developer-associate.yml
+++ b/learn-certs-pr/m365-developer-associate.yml
@@ -31,7 +31,7 @@ exams:
 - uid: exam.ms-600
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Помощник разработчика.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft 365 Certified: Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4561r
 - title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
