--- a/learn-certs-pr/m365-teams-administrator-associate.yml
+++ b/learn-certs-pr/m365-teams-administrator-associate.yml
@@ -32,7 +32,7 @@ exams:
 - uid: exam.ms-700
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Младший администратор Teams.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft 365 Certified: Teams Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45gtR
 - title: Руководство по обучению и сертификации
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
