--- a/learn-certs-pr/m365-teamwork-administrator.yml
+++ b/learn-certs-pr/m365-teamwork-administrator.yml
@@ -43,7 +43,7 @@ exams:
 - uid: exam.ms-301
 resources:
 - title: Обучение для получения сертификата
-  description: Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Teamwork Administrator Associate.
+  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft 365 Certified: Teamwork Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE453ss
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
